# fastapi-cache-crud

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  config.py  database.py  factories.py  pyproject.toml
app/database/: models.py
app/schemas/: pessoas.py
app/tests/: test_main.py
app/usecases/: pessoas.py
