[tool.poetry]
name = "fastapi-cache-crud"
version = "0.1.0"
description = ""
authors = ["Jackson Vieira <jacksonvieiira12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
sqlmodel = "^0.0.11"
faker = "^20.0.3"
pip = "^23.3.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
